# ChangeLog for dev-util/netbeans
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/netbeans/ChangeLog,v 1.107 2009/05/02 23:13:31 fordfrog Exp $

  02 May 2009; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.7_beta-r1.ebuild:
  Fixed and improved documentation building

  02 May 2009; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.7_beta-r1.ebuild:
  Fixed problem with compilation of netbeans locales, also updated locales
  to the latest sources

*netbeans-6.7_beta-r1 (02 May 2009)

  02 May 2009; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-6.7_beta.ebuild, +netbeans-6.7_beta-r1.ebuild:
  Fixed problem with missing jars

*netbeans-6.7_beta (02 May 2009)

  02 May 2009; Miroslav Šulc <fordfrog@gentoo.org>
  +files/6.7/nbbuild_build.xml.patch, +netbeans-6.7_beta.ebuild,
  +files/6.7/nbbuild_templates_projectized.xml.patch:
  Added netbeans 6.7 beta ebuild

  29 Mar 2009; Petteri Räty <betelgeuse@gentoo.org>
  netbeans-5.5.1-r1.ebuild, netbeans-6.5-r4.ebuild:
  Migrate to EAPI 2 for bug #239835.

  24 Mar 2009; Petteri Räty <betelgeuse@gentoo.org>
  netbeans-5.5.1-r1.ebuild:
  Add SLOT dep for antlr.

  24 Mar 2009; Petteri Räty <betelgeuse@gentoo.org> -netbeans-5.5.1.ebuild:
  Remove old revision.

*netbeans-6.5-r4 (17 Dec 2008)

  17 Dec 2008; Miroslav Šulc <fordfrog@gentoo.org> -netbeans-6.5-r3.ebuild,
  +netbeans-6.5-r4.ebuild:
  Fixed bug #251270 (inclusion of binary files for SunOS and Mac)

*netbeans-6.5-r3 (05 Dec 2008)

  05 Dec 2008; Miroslav Šulc <fordfrog@gentoo.org> -netbeans-6.5-r2.ebuild,
  +netbeans-6.5-r3.ebuild:
  Applied patch from Markus Meier <maekke@gentoo.org>. Building of several
  localizations is now performed in single run. Fixed bug #249839 (problem
  with web-service client generation).

  04 Dec 2008; Miroslav Šulc <fordfrog@gentoo.org> netbeans-6.5-r2.ebuild:
  Another fix of the check of what modules are missing in netbeans modules
