@@ -24,6 +24,6 @@ DIST netbeans-c++-5_5_1-linux.bin 9247744 RMD160 56c91ab483207b1d90554049263a2f2
 EBUILD netbeans-3.6-r1.ebuild 3140 RMD160 ccfc3af6a20cad06d1a41965ea607322ff123cd9 SHA1 26281fb533e287171dc8d9408e63b4e8d8b9a646 SHA256 94a9463eb85659b0a3d224a4e7e1d071125f55c2d361db6a32221391a46746bb
 EBUILD netbeans-5.5.1-r1.ebuild 15127 RMD160 4197f51f7ea021f28b52baab5e14e3c339a3a61b SHA1 c820a49082aa073b5515d8ea204fee24df054040 SHA256 6ef719e19de09aff5e02fd21de7c065f68f75084e5e6d2368f25ff0d3c6c78fd
 EBUILD netbeans-6.5-r4.ebuild 39591 RMD160 aeda3cbba875f25e1223bf5ccac8aa937bc910db SHA1 6ca138e59d05bbf9c98fde6d9fb359f4bb2974cf SHA256 faf9d88505cae8d9b098a2501cb36eaf9d7490db5fbc56f1c293778939d1ff66
-EBUILD netbeans-6.7_beta-r1.ebuild 39521 RMD160 ea9be953c7a6b43da0ea4d23b3e6cf869e1e2cd0 SHA1 7dfe46ceca1c050dc92baaf95f1390a63b85e67b SHA256 b2acfb41ea26bdc655af3570a72f4ed088d08c02c3b2386e0b7a0d0051c470bd
-MISC ChangeLog 19235 RMD160 2f8066d9be57e3e5f85f087faf0a26e2efca7a4a SHA1 f6dbcb836b3d441ca89d8ddfb7853e7d536c4c9a SHA256 3b53df4c14868f302a4600190fd7aba8e657835794b6db45c14654e9972cf0e8
+EBUILD netbeans-6.7_beta-r2.ebuild 39761 RMD160 c5c9c9d6da1fd0f7ef9f1ecf86de82d7efee600b SHA1 a5a83a22dd6900d0458696a10f06ce02233f2fb5 SHA256 b848d6ce2698c9f751d20153ee3831f60b4c71f9376e6e9bdb96a3964028e9da
+MISC ChangeLog 19440 RMD160 31416176af7b763d4d40dc7c52e2c87ace4977ce SHA1 2cb923fa469c95543a25c0792338272503cabede SHA256 dd55fefa862e99cbf32cf4a4c526dad2bcedd2370d17fe670b5730c444ddc101
 MISC metadata.xml 1301 RMD160 1e12597c731e35626197ed6ff4efc2094aa12e61 SHA1 8b0614fb5db9568c8b489908d62fcafc9b636f84 SHA256 14d98dfb63646fb6bc7d433f9626ffa7801ff1de38535167f9b0528dac0182a9
